--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@serverless/tencent-express",
   "description": "Tencent Express Component",
-  "version": "1.0.0",
+  "version": "1.1.3",
   "main": "./serverless.js",
   "publishConfig": {
     "access": "public"
@@ -15,8 +15,7 @@
   "dependencies": {
     "@serverless/core": "^1.0.0",
     "@serverless/tencent-apigateway": "^1.2.0",
-    "@serverless/tencent-cloudfunction": "^1.1.0",
-    "ramda": "^0.26.1"
+    "@serverless/tencent-scf": "^1.1.0"
   },
   "devDependencies": {
     "babel-eslint": "9.0.0",
