--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@serverless/tencent-scf": "^2.0.2",
     "ext": "^1.4.0",
     "fs-extra": "^8.1.0",
-    "tencent-serverless-nodejs": "^1.0.1",
+    "tencent-serverless-http": "^1.0.2",
     "terser": "^4.6.3",
     "type": "^2.0.0",
     "webmake": "^1.1.0"
