fix: make default runtime to Nodejs8.9

--- a/example/serverless.yml
+++ b/example/serverless.yml
@@ -3,6 +3,7 @@ ExpressFunc:
   inputs:
     functionName: express-function
     region: ap-guangzhou
+    runtime: Nodejs8.9
     code: ./
     exclude:
       - .env
