--- a/src/_express/package.json
+++ b/src/_express/package.json
@@ -12,6 +12,6 @@
   "author": "Serverless, Inc.",
   "license": "Apache",
   "dependencies": {
-    "aws-serverless-express": "^3.3.6"
+    "tencent-serverless-http": "^1.0.5"
   }
 }
