--- a/example/serverless.yml
+++ b/example/serverless.yml
@@ -1,7 +1,7 @@
 component: express-tencent@dev # (required) name of the component. In that case, it's express.
-name: express-apixxxxxxxxxx # (required) name of your express component instance.
+name: express-api # (required) name of your express component instance.
 org: test # (optional) serverless dashboard org. default is the first org you created during signup.
-app: myAppxxxx # (optional) serverless dashboard app. default is the same as the name property.
+app: expressApp # (optional) serverless dashboard app. default is the same as the name property.
 stage: dev # (optional) serverless dashboard stage. default is dev.
 
 inputs:
