fix: update dependencies

--- a/.npmignore
+++ b/.npmignore
@@ -8,4 +8,16 @@ coverage
 env.js
 tmp
 test
+*.test.js
 .vscode
+yarn.lock
+package-lock.json
+docs
+.editorconfig
+.eslintignore
+.eslintrc.js
+.prettierignore
+commitlint.config.js
+prettier.config.js
+node_modules
+**/*/node_modules
