--- a/example/serverless.yml
+++ b/example/serverless.yml
@@ -1,4 +1,4 @@
-component: express-tencent@dev # (required) name of the component. In that case, it's express.
+component: express # (required) name of the component. In that case, it's express.
 name: express-api # (required) name of your express component instance.
 org: test # (optional) serverless dashboard org. default is the first org you created during signup.
 app: expressApp # (optional) serverless dashboard app. default is the same as the name property.
