--- a/example/serverless.yml
+++ b/example/serverless.yml
@@ -1,11 +1,12 @@
 component: express # (required) name of the component. In that case, it's express.
-name: express-api # (required) name of your express component instance.
-org: test # (optional) serverless dashboard org. default is the first org you created during signup.
-app: expressApp # (optional) serverless dashboard app. default is the same as the name property.
+name: expressDemo # (required) name of your express component instance.
+org: orgDemo # (optional) serverless dashboard org. default is the first org you created during signup.
+app: appDemo # (optional) serverless dashboard app. default is the same as the name property.
 stage: dev # (optional) serverless dashboard stage. default is dev.
 
 inputs:
-  src: ./src # (optional) path to the source folder. default is a hello world app.
+  # src: ./src # (optional) path to the source folder. default is a hello world app.
+  functionName: expressDemo
   region: ap-guangzhou
   runtime: Nodejs10.15
   exclude:
