--- a/example/serverless.yml
+++ b/example/serverless.yml
@@ -5,8 +5,7 @@ app: appDemo # (optional) serverless dashboard app. default is the same as the n
 stage: dev # (optional) serverless dashboard stage. default is dev.
 
 inputs:
-  # src: ./src # (optional) path to the source folder. default is a hello world app.
-  functionName: expressDemo
+  src: ./src
   region: ap-guangzhou
   runtime: Nodejs10.15
   exclude:
