--- a/src/package.json
+++ b/src/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "download": "^8.0.0",
     "fs-extra": "^8.1.0",
+    "moment": "^2.24.0",
     "tencent-component-toolkit": "^1.1.1",
     "type": "^2.0.0"
   }
