add tencent-component-toolkit library

--- a/src/_shims/package.json
+++ b/src/_shims/package.json
@@ -12,6 +12,7 @@
   "author": "Serverless, Inc.",
   "license": "Apache",
   "dependencies": {
+    "tencent-component-toolkit": "^1.3.0",
     "tencent-serverless-http": "^1.0.7"
   }
 }
