--- a/src/package.json
+++ b/src/package.json
@@ -15,6 +15,7 @@
     "download": "^8.0.0",
     "fs-extra": "^8.1.0",
     "moment": "^2.24.0",
+    "tencent-cloud-sdk": "https://github.com/serverless-tencent/tencent-cloud-sdk#develop",
     "tencent-component-toolkit": "^1.3.0",
     "type": "^2.0.0"
   }
