feat: add metrics api (#27)
* add express metrics api

* add custom metrics data

* change timezone inputs

* change code

* add tencent-component-toolkit library

* change metrics response

* add function default role

* filter api path error

* fix: various fix of building metrics

* fix custom metrics report error

* add debug log

* pad function metrics timestamp

* add build metrics api

* delete build metrics function

* fixed api latency p50/p95 is empty

* change package version

Co-authored-by: hkbarton <hkbarton@gmail.com>

--- a/src/_shims/package.json
+++ b/src/_shims/package.json
@@ -12,6 +12,7 @@
   "author": "Serverless, Inc.",
   "license": "Apache",
   "dependencies": {
+    "tencent-component-monitor": "^1.0.1",
     "tencent-serverless-http": "^1.0.7"
   }
 }
