--- a/src/package.json
+++ b/src/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "download": "^8.0.0",
     "fs-extra": "^8.1.0",
-    "tencent-component-toolkit": "^1.2.4",
+    "moment": "^2.24.0",
+    "tencent-component-toolkit": "^1.4.0",
     "type": "^2.0.0"
   }
 }
