--- a/src/package.json
+++ b/src/package.json
@@ -15,6 +15,7 @@
     "download": "^8.0.0",
     "fs-extra": "^8.1.0",
     "moment": "^2.24.0",
+    "tencent-cloud-sdk": "^0.1.0",
     "tencent-component-toolkit": "^1.4.0",
     "type": "^2.0.0"
   }
