--- a/example/serverless.yml
+++ b/example/serverless.yml
@@ -1,7 +1,7 @@
 org: orgDemo # (optional) serverless dashboard org. default is the first org you created during signup.
 app: appDemo # (optional) serverless dashboard app. default is the same as the name property.
 stage: dev # (optional) serverless dashboard stage. default is dev.
-component: express # (required) name of the component. In that case, it's express.
+component: express@dev # (required) name of the component. In that case, it's express.
 name: expressDemo # (required) name of your express component instance.
 
 inputs:
