--- a/example/src/package.json
+++ b/example/src/package.json
@@ -2,7 +2,7 @@
   "name": "express-demo",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "sls.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
