--- a/serverless.component.yml
+++ b/serverless.component.yml
@@ -1,10 +1,10 @@
 name: express
 version: 0.0.12
-author: Tencent Cloud Inc.
-org: Tencent Cloud Inc.
+author: Tencent Cloud, Inc.
+org: Tencent Cloud, Inc.
 description: Deploys a serverless Express.js application onto Tencent SCF and Tencent APIGateway.
 keywords: tencent, serverless, express
 repo: https://github.com/serverless-components/tencent-express/tree/v2
-readme: https://github.com/serverless-components/tencent-express/tree/v2
+readme: https://github.com/serverless-components/tencent-express/tree/v2/README.md
 license: MIT
 main: ./src
