--- a/serverless.component.yml
+++ b/serverless.component.yml
@@ -2,7 +2,7 @@ name: express
 version: 0.0.18
 author: Tencent Cloud, Inc.
 org: Tencent Cloud, Inc.
-description: Deploys a serverless Express.js application onto Tencent SCF and Tencent APIGateway.
+description: Deploy a serverless Express.js application on Tencent SCF and API Gateway.
 keywords: tencent, serverless, express
 repo: https://github.com/serverless-components/tencent-express
 readme: https://github.com/serverless-components/tencent-express/tree/master/README.md
