--- a/example/serverless.yml
+++ b/example/serverless.yml
@@ -1,18 +1,15 @@
-org: orgDemo # (optional) serverless dashboard org. default is the first org you created during signup.
-app: appDemo # (optional) serverless dashboard app. default is the same as the name property.
-stage: dev # (optional) serverless dashboard stage. default is dev.
-component: express # (required) name of the component. In that case, it's express.
-name: expressDemo # (required) name of your express component instance.
+org: orgDemo
+app: appDemo
+stage: dev
+component: express
+name: expressDemo
 
 inputs:
   src:
-    src: ./ # (optional) path to the source folder. default is a hello world app.
+    src: ./
     exclude:
       - .env
-  region: ap-guangzhou
-  runtime: Nodejs10.15
   apigatewayConf:
     protocols:
       - http
       - https
-    environment: release
