--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged",
+      "pre-commit": "ygsec && lint-staged",
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
-      "pre-push": "npm run lint:fix && npm run prettier:fix"
+      "pre-push": "ygsec && npm run lint:fix && npm run prettier:fix"
     }
   },
   "lint-staged": {
@@ -45,6 +45,7 @@
     "@semantic-release/npm": "^7.0.4",
     "@semantic-release/release-notes-generator": "^9.0.1",
     "@serverless/platform-client-china": "^1.0.19",
+    "@ygkit/secure": "0.0.3",
     "axios": "^0.19.2",
     "babel-eslint": "^10.1.0",
     "dotenv": "^8.2.0",
@@ -52,7 +53,7 @@
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-prettier": "^3.1.2",
-    "husky": "^4.2.3",
+    "husky": "^4.2.5",
     "jest": "^25.0.1",
     "lint-staged": "^10.0.8",
     "prettier": "^1.19.1",
