--- a/src/package.json
+++ b/src/package.json
@@ -1,7 +1,8 @@
 {
   "dependencies": {
+    "adm-zip": "^0.4.16",
     "download": "^8.0.0",
-    "tencent-component-toolkit": "^1.17.0",
+    "tencent-component-toolkit": "^1.18.6",
     "type": "^2.0.0"
   }
 }
